glx/testdata/invalid/broken-references/persons/person-jane-smith.glx
persons:
  person-jane-smith-1876:
    properties:
      name:
        value: "Jane Smith"
        fields:
          given: "Jane"
          surname: "Smith"
      gender: "female"
    notes: "Daughter of John Smith and Mary Brown."
    tags:
      - "descendant"
